@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Add BITCHXRC_NAME to config.h. (caf)
+
 * Correctly handle case when a nick comes between a -s flag and a server name
   on the command line (reported by gauze). (caf)
 
